--- a/public/mobile.html
+++ b/public/mobile.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile Camera Streamer</title>
+    <title>Mobile: Set IP Webcam URL</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Mobile Camera Streamer</h1>
-    <video id="localVideo" autoplay muted playsinline></video>
-    <button id="startButton">Start Streaming</button>
-    <p id="status">Status: Idle</p>
+    <h1>Set IP Webcam URL</h1>
+    <p>Run an IP Webcam app on your phone (on the same Wi-Fi as your Quest). Enter its video stream URL below.</p>
+    
+    <div>
+        <label for="ipWebcamUrl">IP Webcam Video Stream URL:</label>
+        <input type="text" id="ipWebcamUrl" placeholder="e.g., http://192.168.1.10:8080/video" size="50">
+    </div>
+    <button id="setStreamUrlButton">Set Stream URL</button>
+    <p id="status">Status: Idle. Connects to server automatically.</p>
+    <p><a href="/" class="button-link">Back to Home</a></p>
 
     <script src="client-mobile.js"></script>
 </body>
