--- a/public/quest.html
+++ b/public/quest.html
@@ -88,7 +88,7 @@
 <body>
     <h1>Quest IP Cam Viewer</h1>
     <div class="stream-container">
-        <img id="remoteStreamImg" alt="IP Webcam Stream - Waiting for URL..." src="#" />
+       <img id="remoteStreamImg" crossorigin="anonymous" alt="IP Webcam Stream - Waiting for URL..." src="#" />
     </div>
     
     <!-- Canvas for WebXR rendering (hidden from UI) -->
